--- a/index.html
+++ b/index.html
@@ -1,17 +1,18 @@
-<!doctype html>
-
-<html lang="en">
+<!DOCTYPE html>
+<html>
 <head>
-  <meta charset="utf-8">
+    <meta charset="UTF-8">
+    <link herf="styles.css" rel="stylesheet">
 
   <title>Trandomiz</title>
 
-
-  <link rel="stylesheet" href="css/styles.css?v=1.0">
-
 </head>
 
-<body>
+<body> 
+    <div class="rank2piromancer">
+    <h1>yeeeeeeeeeeeeeeeeeeeeeet dog</h1>
+    </div>
+
   <script src="js/scripts.js"></script>
 </body>
 </html>
