added garbage code

--- a/index.html
+++ b/index.html
@@ -1,11 +1,30 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="UTF-8">
-    <link herf="styles.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <link herf="styles.css" rel="stylesheet">
 
   <title>Trandomiz</title>
 
+<style>
+body {
+  background-color: aquamarine;
+}
+.rank2piromancer {
+  text-align: center;
+}
+input {
+  width: 100%;
+  padding: 12px 20px;
+  background-color: aquamarine;
+  margin: 8px 0;
+  box-sizing: border-box;
+  border: 2px solid gray;
+  border-radius: 4px;
+}
+</style>
+
+<script type= "text/javascript" src="js/scripts.js"></script>
 </head>
 
 <body> 
@@ -13,6 +32,14 @@
     <h1>yeeeeeeeeeeeeeeeeeeeeeet dog</h1>
     </div>
 
-  <script src="js/scripts.js"></script>
+<form>
+first name<input type= "text" id="Inputbox">
+second name<input type= "text" id="Inputbox2">
+third name<input type= "text" id="Inputbox3">
+forth name<input type= "text" id="Inputbox4">
+<input type= "submit" value="Submit" onclick="listAdd()">
+</form>
+
+
 </body>
 </html>
